--- a/application.properties
+++ b/application.properties
@@ -6,7 +6,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 jwt.secret=XI9I26uiLeL00up5YUjEfE6xt4uaus9MgO2r1L7CWl4=
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.cloud.discovery.enabled=true
