--- a/client-service.properties
+++ b/client-service.properties
@@ -4,6 +4,6 @@ server.port=9091
 # Database
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/client?useSSL=false&serverTimezone=UTC
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/client?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/client?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
