--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -4,7 +4,8 @@ server.port=9093
 # Database
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/reservation?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/reservation?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/reservation?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 
 management.health.circuitbreakers.enabled=true
