--- a/event-service.properties
+++ b/event-service.properties
@@ -4,7 +4,9 @@ server.port=9092
 # Database
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/event?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/event?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/event?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+
 
 
 
