--- a/client-service.properties
+++ b/client-service.properties
@@ -3,7 +3,8 @@ server.port=9091
  
 # Database
 spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.password=
+spring.datasource.password=root
 #spring.datasource.url=jdbc:mysql://localhost:3306/client?useSSL=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://mysql:3306/client?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
