--- a/client-service.properties
+++ b/client-service.properties
@@ -2,9 +2,9 @@ spring.application.name=client-service
 server.port=9091
  
 # Database
-spring.datasource.username=root
+spring.datasource.username=${DB_USERNAME}
 #spring.datasource.password=
-spring.datasource.password=root
+spring.datasource.password=${DB_PASSWORD}
 #spring.datasource.url=jdbc:mysql://localhost:3306/client?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://mysql:3306/client?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
