--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -2,11 +2,11 @@ spring.application.name=reservation-service
 server.port=9093
 
 # Database
-spring.datasource.username=root
+spring.datasource.username=${DB_USERNAME}
 #spring.datasource.password=
-spring.datasource.password=root
+spring.datasource.password=${DB_PASSWORD}
 #spring.datasource.url=jdbc:mysql://localhost:3306/reservation?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://mysql:3306/reservation?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 
 management.health.circuitbreakers.enabled=true
